Use copy instead of rename for unsafe saving on Linux Resolves #1511 See https://bugreports.qt.io/browse/QTBUG-64008